--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -9,6 +9,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="student" />
+        android:text="List of all Tutors and the their courses" />
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tutorsListView"/>
 
 </FrameLayout>
