Fixed minor bug

--- a/app/src/main/res/layout/fragment_login_student.xml
+++ b/app/src/main/res/layout/fragment_login_student.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginStudentFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".LoginStudentFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -18,7 +18,7 @@
     <EditText
         android:id="@+id/usernameIn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></EditText>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/password"
@@ -30,26 +30,28 @@
     <EditText
         android:id="@+id/passwordIn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></EditText>
+        android:layout_height="wrap_content"/>
+
     <Button
+        android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:id="@+id/login"></Button>
+        android:text="Login"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="You don't have an account?"
-        android:textSize="30sp">
-        ></TextView>
+        android:textSize="30sp"/>
+
     <Button
+        android:id="@+id/Signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:id="@+id/Signup"></Button>
+        android:text="Sign Up" />
+
     <TextView
+        android:id="@+id/error"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/error"></TextView>
+        android:layout_height="wrap_content" />
 </LinearLayout>
