Fixed minor bug

--- a/app/src/main/res/layout/fragment_view_scheduel.xml
+++ b/app/src/main/res/layout/fragment_view_scheduel.xml
@@ -10,9 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="All scheduels" />
+
     <ListView
+        android:id="@+id/ListViewSched"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ListViewSched"/>
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
