--- a/app/src/main/res/layout/fragment_view_scheduel.xml
+++ b/app/src/main/res/layout/fragment_view_scheduel.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.tutoringproject.ViewScheduelFragment">
+    tools:context="com.example.tutoringproject.ViewScheduleFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
