Fixed Several bugs

--- a/app/src/main/res/layout/fragment_set_schedule.xml
+++ b/app/src/main/res/layout/fragment_set_schedule.xml
@@ -9,16 +9,30 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Set scheduel timings" />
+        android:text="Set scheduel timing"
+        android:textSize="50sp" />
+
     <TextView
         android:id="@+id/Subject"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Subject"
-        android:textSize="50sp" />
+        android:textSize="25sp" />
 
     <EditText
         android:id="@+id/editTextSubject"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></EditText>
+
+    <TextView
+        android:id="@+id/Date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Date"
+        android:textSize="25sp" />
+
+    <EditText
+        android:id="@+id/editTextDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></EditText>
 
@@ -27,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Time"
-        android:textSize="50sp" />
+        android:textSize="25sp" />
 
     <EditText
         android:id="@+id/editTextTime"
