--- a/app/src/main/res/layout/fragment_view_scheduel.xml
+++ b/app/src/main/res/layout/fragment_view_scheduel.xml
@@ -7,13 +7,15 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="All scheduels" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="All scheduels"
+        android:textSize="25sp" />
 
     <ListView
         android:id="@+id/ListViewSched"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25sp"/>
 
 </FrameLayout>
