--- a/app/src/main/res/layout/fragment_set_schedule.xml
+++ b/app/src/main/res/layout/fragment_set_schedule.xml
@@ -10,7 +10,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Set scheduel timing"
-        android:textSize="50sp" />
+        android:textSize="40sp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/homeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home" />
+
+        <Button
+            android:id="@+id/LogoutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/Subject"
@@ -48,12 +65,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></EditText>
 
-
     <Button
         android:id="@+id/Submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit" />
-
-
 </LinearLayout>
