--- a/app/src/main/res/layout/fragment_login_student.xml
+++ b/app/src/main/res/layout/fragment_login_student.xml
@@ -49,6 +49,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up" />
+    <Button
+        android:id="@+id/BackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Back" />
 
     <TextView
         android:id="@+id/error"
