--- a/app/src/main/res/layout/fragment_student_register.xml
+++ b/app/src/main/res/layout/fragment_student_register.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudentRegisterFragment" android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".StudentRegisterFragment">
 
     <TextView
         android:id="@+id/Fname"
@@ -156,4 +157,14 @@
         android:layout_marginStart="12dp"
         android:layout_marginBottom="16dp"
         android:text="Register"></Button>
+
+    <Button
+        android:id="@+id/BackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="16dp"
+        android:text="Back" />
 </RelativeLayout>
