--- a/app/src/main/res/layout/fragment_tutor.xml
+++ b/app/src/main/res/layout/fragment_tutor.xml
@@ -24,5 +24,10 @@
         android:layout_marginTop="327dp"
         android:layout_marginEnd="28dp"
         android:text="View Schedule" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        android:id="@+id/LogoutButton"/>
 
 </RelativeLayout>
