--- a/app/src/main/res/layout/fragment_tutor_register.xml
+++ b/app/src/main/res/layout/fragment_tutor_register.xml
@@ -92,5 +92,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/Register"
         android:text="Register"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:id="@+id/BackButton"/>
 
 </LinearLayout>
