--- a/app/src/main/res/layout/fragment_tutor.xml
+++ b/app/src/main/res/layout/fragment_tutor.xml
@@ -1,33 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<!-- Use DrawerLayout as root container for activity -->
+    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http:
+//schemas.android.com/apk/res/android"
+     xmlns:app="http://schemas.android.com/apk/res-auto"
+     xmlns:tools="http://schemas.android.com/tools"
+     android:id="@+id/drawer_layout"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     tools:context=".MainActivity">
+    <!-- Layout to contain contents of main body of screen (
+drawer will slide over this) -->
+     <FrameLayout
+     android:id="@+id/content_frame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".TutorFragment">
+     android:layout_height="match_parent" />
 
-    <Button
-        android:id="@+id/setSchedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="327dp"
-        android:text="Set Schedule" />
+     <!-- Container for contents of drawer - use NavigationView
+to make configuration easier -->
+     <com.google.android.material.navigation.NavigationView android:id="@+id/navigation_view"
+     android:layout_width="wrap_content"
+     android:layout_height="match_parent"
+     android:layout_gravity="start"
+     android:fitsSystemWindows="true"
+     app:menu="@menu/drawer_menu" />
 
-    <Button
-        android:id="@+id/viewschedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="327dp"
-        android:layout_marginEnd="28dp"
-        android:text="View Schedule" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Logout"
-        android:id="@+id/LogoutButton"/>
+     </androidx.drawerlayout.widget.DrawerLayout>
 
-</RelativeLayout>
+
+
+
