--- a/app/src/main/res/layout/fragment_tutor.xml
+++ b/app/src/main/res/layout/fragment_tutor.xml
@@ -1,30 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Use DrawerLayout as root container for activity -->
-    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http:
-//schemas.android.com/apk/res/android"
-     xmlns:app="http://schemas.android.com/apk/res-auto"
-     xmlns:tools="http://schemas.android.com/tools"
-     android:id="@+id/drawer_layout"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     tools:context=".MainActivity">
-    <!-- Layout to contain contents of main body of screen (
-drawer will slide over this) -->
-     <FrameLayout
-     android:id="@+id/content_frame"
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--&lt;!&ndash; Use DrawerLayout as root container for activity &ndash;&gt;-->
+<!--    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http:-->
+<!--//schemas.android.com/apk/res/android"-->
+<!--     xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--     xmlns:tools="http://schemas.android.com/tools"-->
+<!--     android:id="@+id/drawer_layout"-->
+<!--     android:layout_width="match_parent"-->
+<!--     android:layout_height="match_parent"-->
+<!--     tools:context=".MainActivity">-->
+<!--    &lt;!&ndash; Layout to contain contents of main body of screen (-->
+<!--drawer will slide over this) &ndash;&gt;-->
+<!--     <FrameLayout-->
+<!--     android:id="@+id/content_frame"-->
+<!--    android:layout_width="match_parent"-->
+<!--     android:layout_height="match_parent" />-->
+
+<!--     &lt;!&ndash; Container for contents of drawer - use NavigationView-->
+<!--to make configuration easier &ndash;&gt;-->
+<!--     <com.google.android.material.navigation.NavigationView android:id="@+id/navigation_view"-->
+<!--     android:layout_width="wrap_content"-->
+<!--     android:layout_height="match_parent"-->
+<!--     android:layout_gravity="start"-->
+<!--     android:fitsSystemWindows="true"-->
+<!--     app:menu="@menu/drawer_menu" />-->
+
+<!--     </androidx.drawerlayout.widget.DrawerLayout>-->
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-     android:layout_height="match_parent" />
-
-     <!-- Container for contents of drawer - use NavigationView
-to make configuration easier -->
-     <com.google.android.material.navigation.NavigationView android:id="@+id/navigation_view"
-     android:layout_width="wrap_content"
-     android:layout_height="match_parent"
-     android:layout_gravity="start"
-     android:fitsSystemWindows="true"
-     app:menu="@menu/drawer_menu" />
-
-     </androidx.drawerlayout.widget.DrawerLayout>
+    android:layout_height="match_parent">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/setSchedule"
+        android:text="Add schedule"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/viewschedule"
+        android:text="View schedule"/>
+</LinearLayout>
 
 
 
